--- a/bylaws.tex
+++ b/bylaws.tex
@@ -95,25 +95,32 @@ Under each of these bodies a number of councils, committees, and working groups 
 \section{Governing Board}
 
 The Governing Board (GB), a body whose composition is designed to be representative of the membership of the collaboration as a whole, is the %ultimate 
-policy forming body of the CMB-S4 collaboration. 
+policy forming body of the CMB-S4 collaboration.  Its other key role is oversight of the Spokespersons and the \exec.
 
 \subsection{Scope}
-The Governing Board has two main roles: to facilitate discussion of collaboration-wide issues---especially those that concern the self-governance of CMB-S4 Collaboration---and to provide oversight of the co-spokespersons and the \exec. %and the co-spokepersons.
-Governing Board activities include, but are not limited to:  %omitted "Collaboration as a whole---
+%The Governing Board has two main roles: to facilitate discussion of collaboration-wide issues---especially those that concern the self-governance of the CMB-S4 Collaboration---and to provide oversight of the Spokespersons and the \exec. %and the co-spokepersons.
+Any powers not explicitly assigned to a different governing body in these Bylaws reside in the Governing Board.
+Governing Board responsibilities include, but are not limited to:  %omitted "Collaboration as a whole---
 
 \begin{itemize}
-\item Approval and revision of Collaboration Bylaws; amendment of the Bylaws requires a super-majority of the GB. This excludes any Bylaws that directly pertain the power, scope, election, etc. of the GB, which will be discussed in Section \ref{subsec:amend}.
+\item Oversight of the overall progress, status and functioning of the collaboration.  
+
+\item Oversight of the Spokespersons and their activities.  The GB charges the Spokespersons to prepare a yearly plan for the collaboration.  The plan must be ratified by a supermajority vote of the GB.  The GB charges the Spokespersons to carry out specific duties for the collaboration, including, but not limited to, collaboration reviews, and reviews of the councils and committees operating under the auspices of the Spokespersons and the \exec.  The GB may require a detailed verbal, or written report from the Spokespersons on any action. The GB may remove a Spokesperson by a supermajority vote if their performance is insufficient. See also \S\ref{sec:removal}.
+
+%\item Charging the co-spokespersons to carry out specific duties for the collaboration, including, but not limited to, collaboration reviews, committee, and board reviews. 
+
+%\item Charging the co-spokespersons with preparation of a yearly plan for the collaboration and the ratification of this plan. 
+
+\item Approval and revision of Collaboration Bylaws, including the Membership and Publication and Speakers policies.   Amendment of the Bylaws requires a supermajority of the GB.  Major changes (see \S\ref{subsec:amend}) must be ratified by the Voting Members of the collaboration.  %This excludes any Bylaws that directly pertain the power, scope, election, etc. of the GB, which will be discussed in Section \ref{subsec:amend}.
 
 
-\item Charging the co-spokespersons to carry out specific duties for the collaboration, including, but not limited to, collaboration reviews, committee, and board reviews. 
+%\item Oversight of the activities of the co-spokespersons. The GB may require a detailed verbal, or written report from the co-spokespersons on any action. 
 
-\item Charging the co-spokespersons with preparation of a yearly plan for the collaboration and the ratification of this plan. 
+\item Formal acceptance of new collaboration members, and resolution of membership conflicts/issues, such as the removal of members and institutions from the collaboration. The change in status of a member (including acceptance or removal) requires approval by a supermajority of the GB.
 
-\item Oversight of the activities of the co-spokespersons. The GB may require a detailed verbal, or written report from the co-spokespersons on any action. 
+\item Organization of elections for Spokespersons, GB members, and other elected collaboration officials (see \S\ref{sec:elections}).  
 
-\item Membership conflicts/issues, such as the removal of members and institutions from the collaboration. Removal of a member requires approval by a super-majority of the GB.
-
-\item Organization of elections for Spokespersons, GB members, \shorte \ members, and other elected collaboration officials.
+\item Removal of any collaboration member from an elected or appointed leadership role in the event of major failings of professional conduct,or gross insufficiency of performance.  Removal requires a supermajority vote of the GB.   Leadership roles include, but are not limited to, the Spokespersons, GB members, \shorte\ members, and Council and Committee members and chairs.  See also \S\ref{sec:removal}).
 
 %\item Oversight of various collaboration sub-committees and councils including, but not
 %limited to: Elections, Membership, Publications, Science Council, Education and
@@ -122,45 +129,53 @@ Governing Board activities include, but are not limited to:  %omitted "Collabora
 
 \item Approval of additional long-standing sub-committees as required. This may include promotion of short term sub-committees established by the co-spokespersons to long-term status. 
 
-\item \textcolor{red}{Ratification of changes to the Speakers/Publications Policy.}
+%\item \textcolor{red}{Ratification of changes to the Speakers/Publications Policy.}
 
 \end{itemize}
 
-\textit{Any powers not explicitly assigned to a different governing body in these bylaws reside in the Governing Board}. 
+% moved the following to the start of the Scope section:  \textit{Any powers not explicitly assigned to a different governing body in these bylaws reside in the Governing Board}. 
 
 \subsection{Board Representation}
-The GB will be composed of 17 members. 
-To ensure that the board is truly ``\textbf{representative}'' of the collaboration, prior to the election the GB---or the ICCC for first election---will define various categories of representation it is deemed important to include on the GB (possibly including e.g., ``Tenure Track" early career scientists,  historically underrepresented groups, partner countries with significant membership, members of small institutions, \textcolor{red}{representatives of existing CMB programs}, etc). Both the GB and spokespersons---or the ICCC for first election---should particularly encourage suitable candidates in each of these categories to self-nominate for board membership.
-
+The GB will be composed of 17 members. The Spokespersons and other members of the \exec\ may not serve on the GB.  
 The length of a term of service for a Governing Board member is two years; members are allowed to serve at most two terms consecutively.
-Further details on the election of GB members are provided in Section \ref{sec:elections}.
+To ensure that the board is truly ``\textbf{representative}'' of the collaboration, prior to each GB election,  the GB and the Spokespersons (or the ICCC for the first election) will particularly encourage suitable candidates from a broad range of 
+backgrounds to self-nominate  for GB membership.  Further details on the election of GB members is provided in  \S\ref{sec:gb-elections}.  
+
+%To ensure that the board is truly ``\textbf{representative}'' of the collaboration, prior to the election the GB---or the ICCC for first election---will define various categories of representation it is deemed important to include on the GB (possibly including e.g., ``Tenure Track" early career scientists,  historically underrepresented groups, partner countries with significant membership, members of small institutions, \textcolor{red}{representatives of existing CMB programs}, etc). Both the GB and spokespersons---or the ICCC for first election---should particularly encourage suitable candidates in each of these categories to self-nominate for GB  membership.
 
 
-\subsection{Governing Board Chair}
 
-The GB chair is responsible for scheduling GB meetings, distributing the agendas, chairing the meetings, and distributing the minutes. The GB vice chair will reside if the chair is absent. A GB secretary will be delegated to take and distribute the minutes. 
+\subsection{Governing Board Chair, Vice Chair and Secretary}
 
-\subsection{Election of the Governing Board Chair}
+The GB chair is responsible for scheduling GB meetings, coordinating requests for reporting from the Spokespersons, distributing the agendas, and chairing the meetings.  The GB chair only votes on matters before the GB if their vote is needed to break a stalemate.  The GB vice chair will preside if the chair is absent. A GB secretary will be delegated to take and distribute the minutes to the GB, and provide summaries of the meetings to the collaboration.   
+
+%\subsection{Election of the Governing Board Chair}
 %The GB chair and vice chair will be elected from amongst the board members. 
-Every year, starting with the inception of the GB, the chair and vice chair of the GB are elected from the GB membership to serve a one-year term. 
+Every year, starting with the inception of the GB, the chair and vice chair of the GB are elected from the GB membership to serve one-year terms. 
 % GB members nominate candidates by email and then vote by email, with the votes in both cases tabulated in secret by a third party agreed upon by the GB at large. The candidate with the most votes becomes the GB chair. In case of a tie, a runoff election is held. In case of a tie in the final runoff, the chair will recuse him/herself from the vote to resolve the tie, but otherwise he/she is eligible to vote in the election. 
-The secretary of the GB, should one be used, 
-is chosen informally by the GB chair to serve during their term. \Comment{1 year chair term to deal with staggered board elections}
+The secretary of the GB is chosen informally by the GB chair to serve during their term. %\Comment{1 year chair term to deal with staggered board elections}
 
 
 \subsection{Governing Board Meetings}
-\textit{The first chaired Governing Board will establish rules for its meetings}. This first meeting will be held no later than 2 months after the selection of the board.  It is expected that the board will meet no less than quarterly to ensure adequate attention to its duties. Such meetings will likely occur in closed session at every CMB-S4 collaboration meeting and in meetings held by telephone or video conference. Special meetings can be called on the initiative of the GB chair or at the request a GB representative. Each meeting requires a quorum to conduct official GB business. Two-thirds of the GB members must cast votes (including abstentions) for a vote to be valid.  
-GB votes can be held by email. Summary minutes of the GB meetings are distributed to the full CMB S4-collaboration by the GB chair or GB secretary. These minutes must include meeting attendance and the %records of the votes cast by all GB members.
+The first Governing Board will establish rules for its meetings after electing its chair. This first meeting will be held no later than two months after the selection of the board.  Agendas for scheduled meetings will be available to the full collaboration in advance.  It is expected that the board will meet no less than quarterly to ensure adequate attention to its duties. Such meetings will likely occur in closed session at every CMB-S4 collaboration meeting and in meetings held by telephone or video conference. Special meetings can be called on the initiative of the GB chair or at the request of another GB member. The Spokespersons are typically asked to attend GB meetings, with the exception of any Closed Executive Sessions during the meetings.  The GB can invite other observers at its discretion. Each meeting requires a quorum to conduct official GB business. Two-thirds of the GB members must cast votes (including abstentions) for a vote to be valid.  
+GB votes can be held by email or other online method. Summaries of the GB meetings are distributed to the full CMB S4-collaboration by the GB chair or GB secretary. These summaries must include meeting attendance and the %records of the votes cast by all GB members.
 results of any votes taken.
- It is the expectation that GB members participate in the majority of meetings. If a GB member fails to participate (via meeting attendance or email) in $\ge 50\%$ of GB meetings in a year, their seat will be open to election during the following cycle and they will be barred from the board for a two year term.  
+ It is the expectation that GB members participate in the majority of meetings. If a GB member fails to participate (via meeting attendance or email) in $\ge 50\%$ of GB meetings in a year, their seat will be open to election during the following cycle and they will be barred from the board for a two-year term.  
 
 \subsection{Election and Voting Commission}
 The GB appoints the chair and two additional members of the Election and Voting Commission (EVC).  The EVC is charged with conducting elections as spelled out in \S\ref{sec:elections}. The EVC acts \textbf{independently} of the GB, but any points of substantive disagreement amongst the members should be referred back to the GB.  Commission members serve two-year terms ordinarily.  However, the GB may choose to extend the first term of the chair to  three years, to allow staggering of the membership for improved continuity between commissions.   Commission members may be removed with a supermajority vote of the GB.
  % , with the exception of the chair who will serve a three-year term at the start of the collaboration (the chair position is a 2 year term thereafter) to enable a continuity between commissions. There are no term limits for this commission. 
  
-\subsection{Amendments to the Bylaws pertaining to the Governing Board} \label{subsec:amend}
-Any amendments made by the Governing Board that pertain to its own election, governance and scope must be ratified by a majority in a vote of the collaboration membership.
+ \subsection{Removal of Members  from Leadership Roles}
+ The GB must inform the collaboration of its decision to remove a member from a leadership role within one working date of the vote to remove.  In the event of a removal of someone from an elected position, the GB may either hold a special election to fill the open position quickly, or wait until the next election cycle.  
+% A two-week collaboration-wide notice is required for a vote for removal and such a vote will be taken if at least half the GB members support such a proposal to the chair. After the vote is taken the record of the vote (e.g., who voted and how) will be made available to the collaboration. In the event of a removal, the open position(s) will be filled following the procedures in these bylaws.
+ 
+ 
+\subsection{Amendments to the Bylaws}
+%pertaining to the Governing Board} \label{subsec:amend}
+The GB may make minor amendments to the Bylaws and ratify them with a supermajority vote.  The GB must  include a tracking cover page with the Bylaws that notes the document version history, including dates of amendments with short synopses of which sections were impacted  The current version of the Bylaws must be available on a public website, and amendments must be announced to the collaboration as soon as the amended version is ratified.  
 
+Major amendments to the Bylaws, including amendments pertaining to the election and scope of the GB itself, must be approved by a supermajority vote of the GB, and made available to the Collaboration for review and comment for at least one month.  After the review period, the Voting Members of the collaboration must ratify the amended Bylaws with a majority vote. 
 
 \section{Co-Spokespersons}
 \label{sec:spokes}
@@ -169,24 +184,23 @@ Any amendments made by the Governing Board that pertain to its own election, gov
 
 The	%scientific 
 leadership of the CMB-S4 collaboration resides with two equal co-spokespersons.			
-Each spokesperson participates actively in the management of all aspects of the	collaboration and, as the executive officials of the Collaboration are responsible for its day-to-day management. 
-To carry out their duties, the spokespersons are expected to solicit advice from the collaboration at large, the Governing Board and the	
-\exec. %on scientific, technical, management, financial, and leadership issues.  
-The co-spokespersons may appoint up to two members of the \exec. This appointment flexibility will enable the SPs to obtain expert advice on an as-needed, short-term basis for matters including (but not limited to) technical and managerial topics that may be outside the expertise of extant collaboration members. Such appointees required approval by the GB, 
-and may be removed from the \exec\ at the co-spokespersons' discretion.  Appointments are limited to 2 years, but may be renewed with approval of the GB. 
+Each spokesperson participates actively in the management of all aspects of the	collaboration and, as the executive officials of the Collaboration, both  are responsible for its day-to-day management. 
+To carry out their duties, the spokespersons are expected to solicit advice from the \exec, the GB and the collaboration at large.  %on scientific, technical, management, financial, and leadership issues.  
+The Spokespersons may appoint up to two members of the \exec. This appointment flexibility will enable the SPs to obtain expert advice on an as-needed, short-term basis for matters including (but not limited to) technical and managerial topics that may be outside the expertise of extant collaboration members. Such appointees required approval by the GB, 
+and may be removed from the \exec\ at the Spokespersons' discretion.  Appointments are limited to two years, but may be renewed with approval of the GB. 
 
 
-Duties include, but are not limited to the following: 
+Spokesperson responsibilities include, but are not limited to the following: 
 \begin{itemize}
-\item Serving as the primary interface of the Collaboration with the Project (once established), partnering institutions, the government agencies, private and public funding institutions, scientific organizations, and the media. Reports on such activities will be provided on a semi-annual basis or by request to the Governing Board.
+\item Serving as the primary interface of the Collaboration with the Project (once established), partnering institutions, the government agencies, private and public funding institutions, scientific organizations, and the media. Reports on such activities will be provided on a semi-annual basis or by request to the GB.
 %Serving as the primary contact with a  host laboratory/institution (if one exists), the funding agencies, scientific organizations, and the press. Reports on such activities will be provided on a semi-annual basis or by request to the Governing Board.
 \item Assuring public dissemination of scientific results. 
 \item Creation of short-term ad hoc committees for the purpose of such tasks as creation of review materials, white papers, exploration of new partnerships, etc.
 \item Organizing and running collaboration meetings. 
 %\item The co-spokespersons may appoint up to two members of the \exec. This appointment flexibility will enable the SPs to obtain expert advice on an as-needed, short-term basis for matters including (but not limited to) technical and managerial topics that may be outside the expertise of extant collaboration members. Such appointees will be approved by the GB,  and may be removed from the board at the co-spokespersons' discretion. Appointments are limited to 2 years, but may be renewed with approval of the GB. 
-\item Carrying out other duties as charged to them by the Governing Board.
+\item Carrying out other duties as charged to them by the GB. 
 
-\item Serving as ex-officio, non-voting members of the Governing Board.
+%\item Serving as ex-officio, non-voting members of the Governing Board.
 
 
 \end{itemize}
@@ -195,9 +209,7 @@ Duties include, but are not limited to the following:
 %\textit{The Governing Board, via super-majority vote, may amend these duties.} 
 Spokespersons are elected to two-year terms. \textbf{There are no term limits specified until the Project is established. After the establishment of the Project, term limits of 2 terms are expected to be imposed once CMB-S4 is more established as a project}. The election process is detailed below in Section \ref{sec:elections}. 
 
-\subsection{Removal of a Spokesperson}
 
-The GB can remove a spokesperson by a secret ballot, requiring approval by a super-majority of the GB. A two-week collaboration-wide notice is required for a vote for removal and such a vote will be taken if at least half the GB members support such a proposal to the chair. After the vote is taken the record of the vote (e.g., who voted and how) will be made available to the collaboration. In the event of a removal, the open position(s) will be filled following the procedures in these bylaws.
 
 
 \section{\exec}
@@ -205,7 +217,7 @@ The GB can remove a spokesperson by a secret ballot, requiring approval by a sup
 
 \subsection{Scope}
 
-The \exec \ (\shorte) is an elected and appointed board that consists of up to 10 members: the co-spokespersons and both the elected chair and deputy of the Science Council, the  chair and deputy of the Technical Council, the chair of the Membership Council, the chair of the Publication and Speakers council, and up to two appointed members. This Board is the agile decision making body in the collaboration with the ability to address the day-to-day collaboration issues. 
+The \exec \ (\shorte) is an elected and appointed board that consists of up to 10 members: the co-spokespersons and the two elected co-chairs of the Science Council, the two co-chairs of the Technical Council, the chair of the Membership Committee, the chair of the Publication and Speakers Committee, and up to two  members appointed by the Spokespersons. The ET is the agile decision-making body in the collaboration with the ability to address the day-to-day collaboration issues. 
 
 The \exec \ has three main roles:
 \begin{itemize}
@@ -217,23 +229,20 @@ The \exec \ has three main roles:
 
 \end{itemize}
 
-Elected \exec \ members serve two year terms with elections governed as described in Section \ref{sec:elections}. The appointment of up to two \shorte members by the co-spokespersons is described in Section \ref{sec:spokes}. 
+% TOOK THIS OUT BECAUSE ALL THE TERMS FOR CHAIRS ETC ARE DESCRIBED ELSEWHERE:  Elected \exec \ members serve two-year terms with elections governed as described in Section \ref{sec:elections}. The appointment of up to two \shorte members by the co-spokespersons is described in Section \ref{sec:spokes}. 
 
-\subsection{Removal of an \exec \ member}
-
-As with a co-spokesperson, the GB can remove an \shorte member by a vote, requiring approval by a super-majority of the GB.  A two-week collaboration wide notice is required for a vote for removal and such a vote will be taken if at least half the GB members support such a proposal to the chair. After the vote is taken the record of the vote (e.g., who voted and how) will be made available to the collaboration. In the event of a removal, the open position(s) will be filled following the procedures in these bylaws.
 
 \subsection{\exec \ Meetings}
 
-The co-spokespersons will chair the meetings, provide the agenda, and establish rules for these meetings. This first meeting will be held no later than 2 weeks after the election of co-spokespersons and the committee chairs. It is expected that the board will meet no less than twice a month to ensure adequate attention to its duties. Meetings can be called on the initiative of a co-spokesperson or at the request an \shorte member provided that a co-spokesperson agrees. A summary of the \shorte meetings will be distributed to the collaboration. Each meeting requires a quorum to conduct official ET business.  It is the expectation that \shorte members participate in the majority of meetings; \shorte members who fail to participate via active live attendance or email in $\geq 50\%$ of meetings will be replaced in the nearest election cycle and barred from the \shorte for a two year term.  
+The Spokespersons will chair the meetings, provide the agendas, and establish rules for these meetings. The first meeting will be held no later than two weeks after the election of the Spokespersons and the Council and Committee chairs. It is expected that the board will meet no less than twice a month to ensure adequate attention to its duties. Meetings can be called on the initiative of a Spokesperson or at the request of an \shorte\ member provided that a Spokesperson agrees. A summary of the \shorte\ meetings will be distributed to the collaboration. Each meeting requires a quorum to conduct official \shorte\ business.  It is the expectation that \shorte members participate in the majority of meetings; \shorte members who fail to participate via active live attendance or email in $\geq 50\%$ of meetings will be replaced in the nearest election cycle and barred from the \shorte for a two year term.  
 
 
 \section{Elections}\label{sec:elections}
-All elected positions of the major bodies in the CMB S4 Collaboration serve two year terms. Elections for each of these bodies will be arranged so that $\sim 50\%$ of the members in each body will be up for election each year. In this section of the bylaws the process and timing for each major election is described.  As there are restrictions placed on the overlap of elected officials between various governing bodies elections are timed to provide collaboration members with multiple opportunities to participate in collaboration governance. 
+All elected positions of the major bodies in the CMB S4 Collaboration serve two-year terms. Elections for each of these bodies will be arranged so that $\sim 50\%$ of the members in each body will be up for election each year. In this section of the bylaws the process and timing for each major election is described.  As there are restrictions placed on the overlap of elected officials between various governing bodies elections are timed to provide collaboration members with multiple opportunities to participate in collaboration governance. 
 Figure \ref{fig:elect_cycle} displays schematically the timing of the election cycles described below.  
 
-In a given election year the ordering shall proceed as follows: first elections will be held for co-spokesperson. Next elections will be held (if required by term completion) for science council chair or deputy chair, chair of the membership council and chair of the publication and speakers council. A third election will be held for Governing Board members. 
-Elections for positions outside the top levels of major bodies may occur when required as such officials are not prohibited from serving other elected roles. Each election is managed by the Election Committee established and overseen by the Governing board. The ICCC must establish this committee prior to the formation of the CMB-S4 collaboration. 
+In a given election year the ordering shall proceed as follows: first elections will be held for co-spokesperson. Next elections will be held (if required by term completion) for Sscience Council chair or deputy chair, chair of the membership council and chair of the publication and speakers council. A third election will be held for Governing Board members. 
+Elections for positions outside the top levels of major bodies may occur when required as such officials are not prohibited from serving other elected roles. Each election is managed by the EVC.   The ICCC must establish this committee prior to the formation of the CMB-S4 collaboration. 
 
 
 \begin{figure}[h!]
@@ -248,20 +257,22 @@ Elections for positions outside the top levels of major bodies may occur when re
 
 Co-Spokespersons are elected to two-year terms. All senior collaboration members (as defined in the membership section below) are allowed to run for these positions.  Normal co-spokesperson elections will be timed such that a slate of nominees can be presented at the GB meeting closest to January 1 each year. The Co-Spokesperson elections will occur prior to elections of the Governing board. As a Co-spokesperson can not be a voting member of the GB, if a voting member of the GB is elected to a co-Spokesperson position they must resign their GB seat prior to the start of Co-Spokesperson term and this vacancy will be filled in the next GB election. 
 
-Prior to the election, qualified electors---as specified in the membership section below---are asked to nominate individuals by the Election Committee. Each elector may nominate one candidate and self-nominations will be accepted. A minimum of two nominations are required for a nominee to be eligible to appear on the slate of election candidates. After a nomination period, the election committee  will consult with the nominees to ascertain their willingness to stand for the election.
+Prior to the election, Voting Members are asked to nominate individuals to the Election and Voting Commission. Each voter may nominate one candidate and self-nominations will be accepted. %A minimum of two nominations is  required for a nominee to be eligible to appear on the slate of election candidates. 
+After a nomination period, the election committee  will consult with the nominees to ascertain their willingness to stand for the election.
 
 If no candidate agrees to stand for election, the terminating co-spokesperson will continue to serve for six months, after which a special election will be held. The term of the individual elected in a special election will be reduced by the amount needed to cause the sum of his/her term and the additional months served by the terminating co-spokesperson to equal two years.
 
-The election is held through an on-line poll, with votes submitted by qualified electors. The election committee will preside over the election results. Each candidate will provide a Candidate Statement to the committee, which will collect these documents and make them available to the collaboration via the CMB-S4 internal web page prior to the balloting. The election committee, in consultation with the GB (or ICCC), determines the detailed timing of the balloting and determines procedures for dealing with any election situations not anticipated in the bylaws. Each qualified elector votes for a single candidate for each vacant position; in the first election, in which two co-spokespersons will be selected, collaboration members may vote for two candidates. 
+The election is held through an on-line poll, with votes submitted by Voting Members. The EVC will preside over the election results. Each candidate will provide a Candidate Statement to the EVC, which will collect these documents and make them available to the collaboration via the CMB-S4 internal web page prior to the balloting. The EVC, in consultation with the GB (or ICCC), determines the detailed timing of the balloting and determines procedures for dealing with any election situations not anticipated in the bylaws. Each Voting Member votes for a single candidate for each vacant position; in the first election, in which two Spokespersons will be selected, collaboration members may vote for two candidates. 
 
-The election committee checks the ballots against the list of qualified voters and tallies the votes. For the first election, the two candidates with the most votes will be elected spokesperson, with the candidate with the highest vote total selected for a 3 year term to enable offset elections of future spokespersons.  In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. The elected candidates will take office when the election committee announces the results of the election to the collaboration via email. 
+The EVC checks the ballots against the list of qualified voters and tallies the votes. For the first election, the two candidates with the most votes will be elected Spokesperson, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons.  In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. The elected candidates will take office when the EVC announces the results of the election to the collaboration via email. 
 
 \subsection{\exec}
-Following conclusion of the Spokesperson election, elections for various elected positions on the \exec \ will be held during the final year of each position's two year cycle. The process for these elections proceeds in an identical fashion as to the Spokesperson election. 
+Following conclusion of the Spokesperson election, elections for various elected positions on the \exec \ will be held during the final year of each position's two-year cycle. The process for these elections proceeds in an identical fashion as to the Spokesperson election. 
 
 \subsection{Governing Board Elections }
+\label{sec:gb-elections}
 
-Every year, following completion of the co-spokesperson election and any required \exec \ elections, the Election Committee then carries out elections for seats on the Governing board whose term is expiring in less than 12 months. The election committee first solicits self-nominations for Governing Board membership and candidate information is then circulated to qualified electors as defined in the membership section of these bylaws. Electors vote via email, with the votes tabulated by the Election Committee members not standing for election (or, in cases where the whole committee is conflicted, by a third party appointed by the Co-Spokespersons). During the election, each elector may vote for 50\% of the total number of board members. 
+Every year, following completion of the co-spokesperson election and any required \exec \ elections, the EVC then carries out elections for seats on the Governing Board whose term is expiring in less than 12 months. The EVC first solicits self-nominations for Governing Board membership and candidate information is then circulated to qualified electors as defined in the membership section of these bylaws. Electors vote via email, with the votes tabulated by the EVC members not standing for election (or, in cases where the whole committee is conflicted, by a third party appointed by the Co-Spokespersons). During the election, each elector may vote for 50\% of the total number of board members. 
 
 
 \subsubsection{The First Election of the Governing Board}
@@ -272,7 +283,7 @@ To enable offset elections (to ensure an element of continuity in the GB), 50\% 
  After the collaboration is established, the GB is to amend these bylaws to establish whether to have separate votes for each category of representation or to continue with a mixed election/appointed governing board model. It is the expectation that the GB be moved to a fully elected body as the collaboration matures. 
 
 \subsection{All Other Elected Positions}
-For other elected Collaboration roles, the Election Committee is charged with establishing election rules and conducting these elections. Note that the committee \textbf{can not} make voting requirements more restrictive than those for the main body elections. Elected  roles in additional positions are limited to at most 2 year terms. 
+For other elected Collaboration roles, the EVC is charged with establishing election rules and conducting these elections. Note that the committee \textbf{can not} make voting requirements more restrictive than those for the main body elections. Elected  roles in additional positions are limited to at most 2 year terms. 
 
 \section{Councils and Committees}
 \label{sec:councils}
@@ -289,11 +300,9 @@ Each analysis working group will have two co-coordinators who each serve for two
 
 
 \subsection{Technical Council and Technical Working Group}
-The Technical Council (TC) is a temporary major body established by the Governing Board and overseen by the Co-spokespersons. Prior to the formation of the Project, the TC is charged to coordinate---in consultation with the Co-spokespersons---the technical aspects needed to meet the scientific objectives of the CMB S4 collaboration. The TC chairs are also members of the \exec. 
+The Technical Council works closely with the Spokespersons to coordinate the technical aspects needed to meet the scientific objectives of the CMB S4 collaboration.  The Technical Council is led by two co-chairs appointed by the Spokespersons.  The two chairs serve as members of the \exec.   The co-coordinators of the various technical working groups are all members of the TC.  These working groups are to be formally established by the Co-spokespersons.   
 
-The Council is led by an overall chair and deputy-chair appointed by the Co-spokespersons and ratified by the Governing Board.  The co-leads of the various technical working groups are all members of the TC.  These working groups are to be formally established by the Co-spokespersons.   
-
-Each working group will have two co-coordinators who each serve for two year terms with the exception of one initial coordinator who will serve for a three year term to enable staggered appointments in the future, as needed.  The Technical Council chairs will solicit self-nominations for these co-coordinator positions. The Co-spokespersons will appoint coordinators with the advice of the Technical Council chairs while considering the distribution of early and late career members when making these appointments.
+Each working group will have two co-coordinators who each serve for two-year terms with the exception of one initial coordinator who will serve for a three-year term to enable staggered appointments in the future, as needed.  The Technical Council chairs will solicit self-nominations for these co-coordinator positions. The Co-spokespersons will appoint coordinators with the advice of the Technical Council chairs while considering the distribution of early and late career members when making these appointments.
 
 We anticipate the role of and/or the need for the Technical Council will be readdressed in these Bylaws when a Project is formed.
 
@@ -309,10 +318,7 @@ The duties of the MC  are to review and evaluate membership applications, review
 
 \subsection{Publication and Speakers  Committee}
 \label{sec:pubcouncil}
-ADD TEXT HERE DEFINING JUST THE MEMBERSHIP AND ROLES
-
-
- chaired by an elected representative from the Executive Team.  There are two sub-committees: the Publications Board with eight collaboration members and the Speakers Bureau with four collaboration members. Roughly half of each group should be pre-tenure. The Spokespersons and Executive Team shall appoint members to these positions for staggered two-year, non-consecutive terms. 
+The Publication and Speakers Committee (PSC) consists of thirteen people including a chair. The chair is elected following the election cycle of the collaboration with  two-year terms, and is limited to two consecutive terms with one year off required before standing again. There are two sub-committees which together comprise the PSC: the Publications Board with eight collaboration members and the Speakers Bureau with four collaboration members. These twelve members are appointed by the \shorte\ with the same term limits.  Roughly half of each group should be pre-tenure. If a PMC member leaves before their term is complete, the \shorte\ will appoint a replacement to finish out their term.  PSC members can be removed by a supermajority of the GB at any time.  
  
 
 
